<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Melon Mix</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="cancel">Cancel</string>
    <string name="not_set">Not set</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="copy">Copy</string>
    <string name="none">None</string>
    <string name="options">Options</string>
    <string name="preview">Preview</string>
    <string name="undo">Undo</string>
    <string name="update">Update</string>
    <string name="close">Close</string>
    <string name="play">Play</string>
    <string name="save">Save</string>
    <string name="ellipsis">…</string>
    <string name="navigate_back">Back</string>
    <string name="version_alpha">Alpha</string>
    <string name="version_beta">Beta</string>
    <string name="version_nightly">Nightly</string>
    <string name="console_ds">DS</string>
    <string name="console_dsi">DSi (Experimental)</string>
    <string name="console_ds_full">Nintendo DS</string>
    <string name="console_dsi_full">Nintendo DSi</string>
    <string name="size_bytes">B</string>
    <string name="size_kb">KB</string>
    <string name="size_mb">MB</string>
    <string name="size_gb">GB</string>
    <string name="error_rom_not_found">Could not find ROM</string>
    <string name="error_rom_not_found_info">The ROM you have selected has not been found. Make sure the selected ROM can be found in the current ROM search directory.\n%1$s</string>
    <string name="error_load_rom">Could not load ROM</string>
    <string name="error_load_rom_message">There was a problem loading the ROM. Make sure it\'s not corrupted and try again.</string>
    <string name="error_load_firmware">Could not load the firmware</string>
    <string name="error_load_firmware_message">There was a problem loading the firmware (%1$s). Make sure the BIOS and firmware dump is not corrupted, that the firmware is bootable and try again.</string>
    <string name="error_load_rom_report_issue">An error log was generated that can help fix this problem. Do you want to open an issue on GitHub with this log? You will need a GitHub account.</string>
    <string name="title_emulator_running">Emulator running</string>
    <string name="message_stop_emulation">Stop emulation and load new ROM?</string>
    <string name="error_load_gba_rom">Could not load GBA ROM</string>
    <string name="action_search_roms">Search ROMs</string>
    <string name="action_sort_roms">Sort ROMs</string>
    <string name="action_boot_firmware">Boot firmware</string>
    <string name="action_refresh_rom_list">Refresh ROM list</string>
    <string name="hint_search_roms">Search ROMs…</string>
    <string name="update_available">Update available: %1$s</string>
    <string name="nightly_update_available">Nightly update available</string>
    <string name="nightly_update_available_message">Do you want to download it now?</string>
    <string name="skip_update">Skip</string>
    <string name="remind_later_update">Later</string>
    <string name="downloading_update">Downloading update…</string>
    <string name="starting_download">Starting download…</string>
    <string name="download_progress_sizes">%1$.1fMB/%2$.1fMB</string>
    <string name="update_download_failed">Failed to download update</string>
    <string name="dsiware_manager">DSiWare Manager</string>
    <string name="no_dsiware_titles_installed">You don\'t have any DSiWare title installed</string>
    <string name="dsiware_manager_no_dsi_setup">You haven\'t setup the DSi system</string>
    <string name="dsiware_manager_invalid_dsi_setup">Your DSi system setup is invalid</string>
    <string name="import_dsiware_title">Import DSiWare title</string>
    <string name="dsiware_manager_setup">Setup</string>
    <string name="dsiware_manager_fix_setup">Fix setup</string>
    <string name="dsiware_manager_load_error">There was a problem listing your DSiWare titles. Please check your DSi setup</string>
    <string name="dsiware_manager_import_title_error_open_nand_failed">The NAND could not be opened</string>
    <string name="dsiware_manager_import_title_error_open_file_failed">Error opening selected file</string>
    <string name="dsiware_manager_import_title_error_not_dsiware_title">Not a DSiWare title</string>
    <string name="dsiware_manager_import_title_error_title_already_imported">DSiWare title already imported</string>
    <string name="dsiware_manager_import_title_error_insatll_failed">Failed to install title</string>
    <string name="dsiware_manager_import_title_error_metadat_fetch_failed">Failed to download title metadata. Check your internet connection</string>
    <string name="dsiware_manager_import_title_error_unknown">An unknown error occurred</string>
    <string name="dsiware_manager_import_data">Import data…</string>
    <string name="dsiware_manager_export_data">Export data…</string>
    <string name="dsiware_manager_import_file_success">%1$s imported successfully</string>
    <string name="dsiware_manager_import_file_error">Failed to import file</string>
    <string name="dsiware_manager_export_file_success">%1$s exported successfully</string>
    <string name="dsiware_manager_export_file_error">Failed to export file</string>
    <string name="dsiware_import_from_file">From file</string>
    <string name="dsiware_import_from_rom_list">From ROM list</string>
    <string name="select_dsiware_title">Select DSiWare title</string>
    <string name="no_dsiware_roms_found">No DSiWare ROMs found</string>
    <string name="info_fps">FPS: %1$d</string>
    <string name="info_play_time_hours_minutes">Play time: %1$dh %2$dm</string>
    <string name="info_play_time_minutes">Play time: %1$dm</string>
    <string name="info_loading">LOADING…</string>
    <string name="save_state_slot">%1$s.</string>
    <string name="failed_save_state">Failed to save state</string>
    <string name="failed_load_state">Failed to load state</string>
    <string name="cant_load_empty_slot">Can\'t load an empty save state slot</string>
    <string name="failed_reset_emulation">Failed to reset emulation</string>
    <string name="save_states_not_supported">Save states are not supported while running the firmware</string>
    <string name="save_states_unavailable_ra_hardcore_enabled">Save states are unavailable while Hardcore mode is enabled</string>
    <string name="rewind_time_seconds">%1$ss</string>
    <string name="rewind_time_minutes_seconds">%1$dm%2$ss</string>
    <string name="rewind_not_enabled">Rewind is not enabled</string>
    <string name="rewind_unavailable_ra_hardcore_enabled">Rewind is unavailable while Hardcore mode is enabled</string>
    <string name="no_image_selected">No image selected</string>
    <string name="failed_to_load_image">Failed to load image</string>
    <string name="emulator_stop_gba_mode_unsupported">GBA mode is not supported</string>
    <string name="emulator_stop_internal_error">An error was encountered during the ROM\'s execution</string>
    <string name="action_sort_alphabetically">Alphabetically</string>
    <string name="action_sort_recently_played">Recently played</string>
    <string name="ds_bios_dir_not_set">DS BIOS directory not set</string>
    <string name="ds_bios_dir_not_set_info">DS BIOS directory is not set. Select the directory that contains the following files:\n&#8226; bios7.bin\n&#8226; bios9.bin\n&#8226; firmware.bin</string>
    <string name="dsi_bios_dir_not_set">DSi BIOS directory not set</string>
    <string name="dsi_bios_dir_not_set_info">DSi BIOS directory is not set. Select the directory that contains the following files:\n&#8226; bios7.bin\n&#8226; bios9.bin\n&#8226; firmware.bin\n&#8226; nand.bin</string>
    <string name="incorrect_bios_dir">Incorrect BIOS directory</string>
    <string name="ds_incorrect_bios_dir_info">The BIOS directory for the DS system is not correct. Make sure that the selected directory contains the following files:\n&#8226; bios7.bin\n&#8226; bios9.bin\n&#8226; firmware.bin</string>
    <string name="dsi_incorrect_bios_dir_info">The BIOS directory for the DSi system is not correct. Make sure that the selected directory that contains the following files:\n&#8226; bios7.bin\n&#8226; bios9.bin\n&#8226; firmware.bin\n&#8226; nand.bin</string>
    <string name="storage_permission_required">Storage permission required</string>
    <string name="storage_permission_required_info">Storage permission is required to load ROMs from your device. Please grant access to storage on the next dialog.</string>
    <string name="microphone_permission_required">Audio recording permission required</string>
    <string name="microphone_permission_required_info">Audio recording permission is required to send microphone data to the emulator. Please grant microphone access permission on the next dialog.</string>
    <string name="system_file_picker_not_found">Your device does not have a file picker. Without one, this emulator will not work</string>
    <string name="system_file_picker_not_enabled">Your device\'s file picker is disabled. Please enable it</string>
    <string name="backup_internal_layout">Backup internal layout</string>
    <string name="backup_external_layout">Backup external layout</string>
    <string name="restore_internal_layout">Restore internal layout</string>
    <string name="restore_external_layout">Restore external layout</string>
    <string name="threaded_rendering">Threaded rendering</string>
    <string name="fps_counter_position">FPS counter position</string>
    <string name="threaded_rendering_summary">Improves performance on 3D games when enabled but may cause graphical glitches.</string>
    <string name="enhanced_graphics">Enhanced graphics (KH Melon Mix)</string>
    <string name="enhanced_graphics_summary">Single-screen widescreen presentation for supported Kingdom Hearts games. US ROMs work best. EU and JP ROMs have limited support and can show glitches.</string>
    <string name="kh_game_language">Game language (menus &amp; subtitles)</string>
    <string name="kh_show_subtitles">Cutscene subtitles (KH Melon Mix)</string>
    <string name="kh_show_subtitles_summary">Display subtitles during HD cutscene playback, when available. The language follows the Game language setting.</string>
    <string name="kh_bgm_category">Remastered music (KH Melon Mix)</string>
    <string name="kh_bgm_pack_days">358/2 Days music pack</string>
    <string name="kh_bgm_pack_recoded">Re:coded music pack</string>
    <string name="kh_bgm_volume">Music volume</string>
    <string name="filter">Filter</string>
    <string name="internal_resolution">Internal resolution</string>
    <string name="renderer">Renderer</string>
    <string name="dsi_camera_source">DSi camera source</string>
    <string name="dsi_camera_image">DSi camera image</string>
    <string name="enable_sound">Enable sound</string>
    <string name="interpolation">Interpolation</string>
    <string name="bitrate">Bitrate</string>
    <string name="volume">Volume</string>
    <string name="audio_latency">Audio latency</string>
    <string name="key_mapping">Key mapping</string>
    <string name="key_mapping_summary">Assign keys to controller inputs</string>
    <string name="soft_input_behaviour">Soft input behaviour</string>
    <string name="vibrate_on_touch">Vibrate on touch</string>
    <string name="vibration_strength">Vibration strength</string>
    <string name="soft_input_opacity">Soft input opacity</string>
    <string name="kh_camera_sensitivity">KH camera sensitivity</string>
    <string name="kh_stick_deadzone">Touch stick deadzone</string>
    <string name="layouts">Layouts</string>
    <string name="layouts_summary">Manage custom layout configurations</string>
</resources>