<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
            android:key="video_renderer"
            android:title="@string/renderer"
            android:summary="%s"
            app:iconSpaceReserved="false"
            android:entries="@array/video_renderer_options"
            android:entryValues="@array/video_renderer_values"
            android:defaultValue="software"/>

    <ListPreference
            android:key="video_internal_resolution"
            android:title="@string/internal_resolution"
            android:summary="%s"
            app:iconSpaceReserved="false"
            android:entries="@array/video_internal_resolution_options"
            android:entryValues="@array/video_internal_resolution_values"
            android:defaultValue="1"/>

    <SwitchPreference
            android:key="enable_threaded_rendering"
            android:title="@string/threaded_rendering"
            android:summary="@string/threaded_rendering_summary"
            app:iconSpaceReserved="false"
            android:defaultValue="true" />

    <!-- [KHMM] master toggle for the KH Melon Mix single-screen enhanced-graphics path -->
    <SwitchPreference
            android:key="enable_enhanced_graphics"
            android:title="@string/enhanced_graphics"
            android:summary="@string/enhanced_graphics_summary"
            app:iconSpaceReserved="false"
            android:defaultValue="true" />

    <!-- [KHMM] subtitles over HD replacement cutscenes (desktop DisableSubtitles config) -->
    <SwitchPreference
            android:key="kh_show_subtitles"
            android:title="@string/kh_show_subtitles"
            android:summary="@string/kh_show_subtitles_summary"
            android:dependency="enable_enhanced_graphics"
            app:iconSpaceReserved="false"
            android:defaultValue="true" />

    <ListPreference
            android:key="video_filtering"
            android:title="@string/filter"
            android:summary="%s"
            app:iconSpaceReserved="false"
            android:entries="@array/video_filtering_options"
            android:entryValues="@array/video_filtering_values"
            android:defaultValue="none"/>

    <ListPreference
            android:key="fps_counter_position"
            android:title="@string/fps_counter_position"
            android:summary="%s"
            app:iconSpaceReserved="false"
            android:entries="@array/fps_counter_position_options"
            android:entryValues="@array/fps_counter_position_values"
            android:defaultValue="hidden" />

    <ListPreference
            android:key="dsi_camera_source"
            android:title="@string/dsi_camera_source"
            android:summary="%s"
            app:iconSpaceReserved="false"
            android:entries="@array/dsi_camera_source_options"
            android:entryValues="@array/dsi_camera_source_values"
            android:defaultValue="physical_cameras" />

    <me.magnum.melonds.ui.settings.preferences.StoragePickerPreference
            android:key="dsi_camera_static_image"
            android:title="@string/dsi_camera_image"
            android:dependency="dsi_camera_source"
            app:iconSpaceReserved="false"
            app:type="file"
            app:permissions="read"
            app:persistPermissions="true"
            app:mimeType="image/jpeg|image/png" />
</PreferenceScreen>