<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
            android:key="sound_enabled"
            android:title="@string/enable_sound"
            app:iconSpaceReserved="false"
            android:defaultValue="true" />

    <ListPreference
            android:key="audio_interpolation"
            android:title="@string/interpolation"
            android:dependency="sound_enabled"
            android:summary="%s"
            app:iconSpaceReserved="false"
            android:entries="@array/audio_interpolation_options"
            android:entryValues="@array/audio_interpolation_values"
            android:defaultValue="none" />

    <ListPreference
            android:key="audio_bitrate"
            android:title="@string/bitrate"
            android:dependency="sound_enabled"
            android:summary="%s"
            app:iconSpaceReserved="false"
            android:entries="@array/audio_bitrate_options"
            android:entryValues="@array/audio_bitrate_values"
            android:defaultValue="auto" />

    <SeekBarPreference
            android:key="volume"
            android:title="@string/volume"
            android:dependency="sound_enabled"
            app:iconSpaceReserved="false"
            app:updatesContinuously="true"
            android:defaultValue="256"
            app:min="0"
            android:max="256" />

    <ListPreference
            android:key="audio_latency"
            android:title="@string/audio_latency"
            android:dependency="sound_enabled"
            android:summary="%s"
            app:iconSpaceReserved="false"
            app:isPreferenceVisible="@bool/settings_audio_latency_enabled"
            android:entries="@array/audio_latency_options"
            android:entryValues="@array/audio_latency_values"
            android:defaultValue="medium" />

    <!-- [KHMM] The microphone-source preference was removed (neither KH game uses the mic;
         pinned to NONE in the settings repository). -->

    <!-- [KHMM] remastered-BGM replacement (KH Melon Mix). The pack lists are populated at
         runtime from the subfolders of assets/<game>/audio/ in the app's external files dir. -->
    <PreferenceCategory
            android:title="@string/kh_bgm_category"
            app:iconSpaceReserved="false">

        <ListPreference
                android:key="kh_bgm_pack_days"
                android:title="@string/kh_bgm_pack_days"
                android:summary="%s"
                app:iconSpaceReserved="false"
                android:defaultValue="" />

        <ListPreference
                android:key="kh_bgm_pack_recoded"
                android:title="@string/kh_bgm_pack_recoded"
                android:summary="%s"
                app:iconSpaceReserved="false"
                android:defaultValue="" />

        <SeekBarPreference
                android:key="kh_bgm_volume"
                android:title="@string/kh_bgm_volume"
                app:iconSpaceReserved="false"
                app:updatesContinuously="true"
                android:defaultValue="100"
                app:min="0"
                android:max="100"
                app:showSeekBarValue="true" />
    </PreferenceCategory>
</PreferenceScreen>